--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       <li>データ永続保存</li>
       <li>バーコードチェック</li>
     </ul>
-    <button id="install-pwa" class="w-full py-3 bg-green-600 hover:bg-green-700 text-white rounded-lg font-semibold transition-colors duration-200 hidden">📱 ホーム画面に追加</button>
+    <button id="install-pwa" class="w-full py-3 bg-green-600 hover:bg-green-700 text-white rounded-lg font-semibold transition-colors duration-200">📱 ホーム画面に追加</button>
   </div>
 </div>
 
