--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>📚 忘れ物防止システム Pro</title>
 <meta name="theme-color" content="#007bff">
 <script src="https://cdn.tailwindcss.com"></script>
-<script src="/js/style_config.js"></script>
-<script src="/js/dark_mode_startup.js"></script>
+<script src="js/style_config.js"></script>
+<script src="js/dark_mode_startup.js"></script>
 
 <!-- ダークモード初期化スクリプト -->
 </head>
@@ -368,9 +368,9 @@
 </div>
 
 <script src="https://unpkg.com/quagga@0.12.1/dist/quagga.min.js"></script>
-<script src="/js/dark_mode.js"></script>
-<script src="/js/pwa.js"></script>
-<script src="/js/indexdb.js"></script>
+<script src="js/dark_mode.js"></script>
+<script src="js/pwa.js"></script>
+<script src="js/indexdb.js"></script>
 <script>
 // グローバル変数
 let items = [];
