--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="js/style_config.js"></script>
 <script src="js/dark_mode_startup.js"></script>
+<link rel="manifest" href="manifest.webmanifest">
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('./sw.js');
+  }
+</script>
 
-<!-- ダークモード初期化スクリプト -->
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
 <div class="max-w-lg mx-auto p-2 sm:p-4">
