--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <script src="js/style_config.js"></script>
 <script src="js/dark_mode_startup.js"></script>
 <link rel="manifest" href="manifest.webmanifest">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<link rel="apple-touch-icon" href="icons/icon-192.png">
 <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('./sw.js');
