--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <!-- TODO: Replace with the final, absolute URL of your deployed app -->
-<meta property="og:url" content="https://your-app-url.com/">
+<meta property="og:url" content="https://vol-11.github.io/CheckMate-V2/">
 <meta property="og:title" content="📚 CheckMate V2">
 <meta property="og:description" content="日々の持ち物を管理し、忘れ物を防止するためのチェックリストPWAです。曜日ごとのアイテム登録やPWA対応で、あなたの「うっかり」をなくします。">
 <!-- TODO: Replace with the final, absolute URL to your icon image -->
-<meta property="og:image" content="https://your-app-url.com/icons/icon-512.png">
+<meta property="og:image" content="https://vol-11.github.io/CheckMate-V2/icons/icon-512.png">
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <!-- TODO: Replace with the final, absolute URL of your deployed app -->
-<meta property="twitter:url" content="https://your-app-url.com/">
+<meta property="twitter:url" content="https://vol-11.github.io/CheckMate-V2/">
 <meta property="twitter:title" content="📚 CheckMate V2">
 <meta property="twitter:description" content="日々の持ち物を管理し、忘れ物を防止するためのチェックリストPWAです。曜日ごとのアイテム登録やPWA対応で、あなたの「うっかり」をなくします。">
 <!-- TODO: Replace with the final, absolute URL to your icon image -->
-<meta property="twitter:image" content="https://your-app-url.com/icons/icon-512.png">
+<meta property="twitter:image" content="https://vol-11.github.io/CheckMate-V2/icons/icon-512.png">
 
 <meta name="theme-color" content="#007bff">
 <script src="https://cdn.tailwindcss.com"></script>
