不具合の修正

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <option value="教材">📚 教材</option>
           <option value="文房具">✏️ 文房具</option>
           <option value="体育用品">⚽ 体育用品</option>
-          <option value="弁当・水筒">🍱 弁当・水筒</option>
+          <option value="弁当">🍱 弁当</option>
           <option value="制服・服装">👔 制服・服装</option>
           <option value="楽器">🎵 楽器</option>
           <option value="部活用品">🏃 部活用品</option>
