--- a/index.html
+++ b/index.html
@@ -223,7 +223,6 @@
     <ul id="items-list" class="space-y-3"></ul>
     <div class="text-center mt-4 space-x-2">
       <button id="sort-toggle" class="px-3 py-1 bg-gray-600 hover:bg-gray-700 text-white rounded-lg text-sm font-medium transition-colors duration-200">📊 並び替え</button>
-      <button id="clear-items" class="px-3 py-1 bg-red-600 hover:bg-red-700 text-white rounded-lg text-sm font-medium transition-colors duration-200">🗑 全削除</button>
     </div>
   </div>
 </div>
@@ -314,7 +313,10 @@
             <div id="forgotten-stats" class="mb-6">
                 <!-- 忘れ物統計がここに表示されます -->
             </div>
-            <h3 class="text-lg font-semibold mb-4 flex items-center"><span class="mr-2">📜</span>忘れ物 全履歴</h3>
+            <div class="flex justify-between items-center mb-4">
+                <h3 class="text-lg font-semibold flex items-center"><span class="mr-2">📜</span>忘れ物 全履歴</h3>
+                <button id="delete-old-forgotten-btn" class="px-3 py-1 bg-red-600 hover:bg-red-700 text-white rounded-lg text-sm font-medium transition-colors duration-200">1ヶ月以上前を削除</button>
+            </div>
             <div id="forgotten-list">
                 <!-- 忘れ物リストがここに表示されます -->
             </div>
@@ -347,17 +349,27 @@
   </div>
 
   <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 mb-4 shadow-md">
-    <h3 class="text-lg font-semibold mb-4 flex items-center"><span class="mr-2">⚙️</span>データ管理</h3>
+    <h3 class="text-lg font-semibold mb-4 flex items-center"><span class="mr-2">⚙️</span>データ管理 (バックアップ)</h3>
     <div class="grid grid-cols-2 gap-2 mb-4">
-      <button id="export-btn" class="py-3 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-medium transition-colors duration-200">⬇ エクスポート</button>
-      <label for="import-file" class="py-3 bg-gray-600 hover:bg-gray-700 text-white rounded-lg font-medium transition-colors duration-200 cursor-pointer text-center flex items-center justify-center">⬆ インポート</label>
+      <button id="export-btn" class="py-3 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-medium transition-colors duration-200">⬇ JSONエクスポート</button>
+      <label for="import-file" class="py-3 bg-gray-600 hover:bg-gray-700 text-white rounded-lg font-medium transition-colors duration-200 cursor-pointer text-center flex items-center justify-center">⬆ JSONインポート</label>
     </div>
     <input type="file" id="import-file" class="hidden" accept="application/json">
     <div class="grid grid-cols-2 gap-2">
-      <button id="backup-btn" class="py-3 bg-cyan-600 hover:bg-cyan-700 text-white rounded-lg font-medium transition-colors duration-200">💾 バックアップ</button>
-      <button id="restore-btn" class="py-3 bg-yellow-600 hover:bg-yellow-700 text-white rounded-lg font-medium transition-colors duration-200">🔄 復元</button>
+      <button id="backup-btn" class="py-3 bg-cyan-600 hover:bg-cyan-700 text-white rounded-lg font-medium transition-colors duration-200">💾 簡易バックアップ</button>
+      <button id="restore-btn" class="py-3 bg-yellow-600 hover:bg-yellow-700 text-white rounded-lg font-medium transition-colors duration-200">🔄 簡易復元</button>
     </div>
     <div id="status-msg" class="mt-4 text-center font-semibold"></div>
+  </div>
+
+  <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 mb-4 shadow-md border-2 border-red-500/50">
+    <h3 class="text-lg font-semibold mb-4 flex items-center text-red-600 dark:text-red-400"><span class="mr-2">⚠️</span>データリセット</h3>
+    <p class="text-sm text-gray-600 dark:text-gray-400 mb-4">この操作は元に戻せません。実行する前に、必要であれば上記のエクスポート機能でバックアップを取ってください。</p>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+        <button id="reset-forgotten-history-btn" class="w-full py-2 px-4 bg-red-600 hover:bg-red-700 text-white rounded-lg font-medium transition-colors duration-200">😥 忘れ物履歴をリセット</button>
+        <button id="reset-categories-btn" class="w-full py-2 px-4 bg-red-600 hover:bg-red-700 text-white rounded-lg font-medium transition-colors duration-200">🏷️ カテゴリをリセット</button>
+        <button id="reset-all-items-btn" class="w-full py-2 px-4 bg-red-800 hover:bg-red-900 text-white rounded-lg font-medium transition-colors duration-200 sm:col-span-2">🗑 全てのアイテムをリセット</button>
+    </div>
   </div>
 
   <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 mb-4 shadow-md">
@@ -812,23 +824,26 @@ document.getElementById('save-edit').addEventListener('click', async () => {
 document.getElementById('export-btn').addEventListener('click', async () => {
   try {
     const allItems = await getAllItems();
-    const allCategories = await getAllCategories(); // カテゴリも取得
+    const allCategories = await getAllCategories();
+    const allForgottenRecords = await getAllForgottenRecords(); // 忘れ物履歴を取得
+
     const exportData = {
-      version: 2,
+      version: 3, // バージョン更新
       categories: allCategories,
       items: allItems,
+      forgottenRecords: allForgottenRecords, // 忘れ物履歴を追加
       exportedAt: new Date().toISOString(),
-      app: 'wasuremono-pro'
+      app: 'CheckMate-V2'
     };
     const dataStr = JSON.stringify(exportData, null, 2);
     const blob = new Blob([dataStr], { type: 'application/json' });
     const url = URL.createObjectURL(blob);
     const a = document.createElement('a');
     a.href = url;
-    a.download = `CheckMate_v2_${new Date().toISOString().split('T')[0]}.json`;
+    a.download = `CheckMate_v2_backup_${new Date().toISOString().split('T')[0]}.json`;
     a.click();
     URL.revokeObjectURL(url);
-    showStatus('✅ データをエクスポートしました', 'success');
+    showStatus('✅ 全データをエクスポートしました', 'success');
   } catch (err) {
     showStatus('エクスポートに失敗しました: ' + err.message, 'error');
   }
@@ -842,7 +857,7 @@ document.getElementById('import-file').addEventListener('change', async e => {
   reader.onload = async () => {
     try {
       const data = JSON.parse(reader.result);
-      const isNewVersion = data.version === 2 && Array.isArray(data.categories) && Array.isArray(data.items);
+      const isNewVersion = (data.version === 2 || data.version === 3) && Array.isArray(data.categories) && Array.isArray(data.items);
       const isOldVersion = !data.version && Array.isArray(data);
 
       if (!isNewVersion && !isOldVersion) {
@@ -853,18 +868,24 @@ document.getElementById('import-file').addEventListener('change', async e => {
 既存のデータは全て上書きされます。よろしいですか？`)) {
         await clearItems();
         await clearCategories();
+        await clearForgottenRecords(); // 忘れ物履歴もクリア
 
         let importedItemCount = 0;
 
         if (isNewVersion) {
-          // 新バージョン
+          // 新バージョン (v2, v3)
           for (const category of data.categories) {
             await addCategory(category);
           }
           for (const item of data.items) {
-            // IDは自動採番させるため削除
-            delete item.id;
+            delete item.id; // IDは自動採番
             await addItem(item);
+          }
+          // v3以降は忘れ物履歴もインポート
+          if (data.version === 3 && data.forgottenRecords && Array.isArray(data.forgottenRecords)) {
+            for (const record of data.forgottenRecords) {
+              await addForgottenRecord(record);
+            }
           }
           importedItemCount = data.items.length;
         } else {
@@ -878,7 +899,6 @@ document.getElementById('import-file').addEventListener('change', async e => {
               categoryNames.add(item.category);
             }
           }
-          // アイテムからカテゴリを抽出して作成
           for (const catName of categoryNames) {
             await addCategory({ id: new Date().getTime() + Math.random(), name: catName });
           }
@@ -900,6 +920,7 @@ document.getElementById('import-file').addEventListener('change', async e => {
   reader.readAsText(file);
   e.target.value = '';
 });
+
 
 
 
@@ -949,6 +970,41 @@ openDB().then(async () => {
     }, 1000);
   }
 });
+
+// データリセット機能
+document.getElementById('reset-all-items-btn').addEventListener('click', async () => {
+    if (confirm('全てのアイテムを削除します。本当によろしいですか？\nこの操作は元に戻せません。')) {
+        await clearItems();
+        items = [];
+        await renderItems();
+        await updateCheckDisplay();
+        await updateStats();
+        showStatus('🗑 全てのアイテムを削除しました', 'success');
+    }
+});
+
+document.getElementById('reset-forgotten-history-btn').addEventListener('click', async () => {
+    if (confirm('全ての忘れ物履歴を削除します。本当によろしいですか？\nこの操作は元に戻せません。')) {
+        await clearForgottenRecords();
+        // UIの更新
+        await renderItems(); // ハイライトを消すため
+        await updateCheckDisplay(); // ハイライトを消すため
+        showStatus('😥 全ての忘れ物履歴を削除しました', 'success');
+        // もし忘れ物タブが開かれていたら、表示を更新する
+        if (document.getElementById('forgotten').style.display !== 'none') {
+            renderForgottenHistoryMode();
+        }
+    }
+});
+
+document.getElementById('reset-categories-btn').addEventListener('click', async () => {
+    if (confirm('全てのカスタムカテゴリを削除し、デフォルト設定に戻します。本当によろしいですか？')) {
+        await clearCategories();
+        await loadCategoriesAndInitialize(); // デフォルトを再読み込み
+        showStatus('🏷️ カテゴリをリセットしました', 'success');
+    }
+});
+
 
 // クリーンアップ
 window.addEventListener('beforeunload', () => {
