--- a/index.html
+++ b/index.html
@@ -77,59 +77,41 @@
 
 <!-- タブナビゲーション -->
 <nav class="flex bg-white dark:bg-gray-800 rounded-lg mb-4 overflow-hidden shadow-md">
-  <button class="tab-btn flex-1 py-3 px-2 text-xs sm:text-sm font-medium transition-all duration-200 bg-blue-600 text-white" data-tab="quick">⚡ クイック</button>
+  <button class="tab-btn flex-1 py-3 px-2 text-xs sm:text-sm font-medium transition-all duration-200 bg-blue-600 text-white" data-tab="check">✅ チェック</button>
+  <button class="tab-btn flex-1 py-3 px-2 text-xs sm:text-sm font-medium transition-all duration-200 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700" data-tab="calendar">📅 日程</button>
   <button class="tab-btn flex-1 py-3 px-2 text-xs sm:text-sm font-medium transition-all duration-200 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700" data-tab="scanner">📱 登録</button>
   <button class="tab-btn flex-1 py-3 px-2 text-xs sm:text-sm font-medium transition-all duration-200 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700" data-tab="items">📋 一覧</button>
-  <button class="tab-btn flex-1 py-3 px-2 text-xs sm:text-sm font-medium transition-all duration-200 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700" data-tab="check">✅ チェック</button>
   <button class="tab-btn flex-1 py-3 px-2 text-xs sm:text-sm font-medium transition-all duration-200 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700" data-tab="forgotten">😥 忘れ物</button>
   <button class="tab-btn flex-1 py-3 px-2 text-xs sm:text-sm font-medium transition-all duration-200 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700" data-tab="settings">⚙️ 設定</button>
 </nav>
 
-<!-- クイックアクセスタブ -->
-<div id="quick" class="tab-content">
-  <div class="grid grid-cols-3 gap-2 sm:gap-4 mb-4">
-    <div class="bg-white dark:bg-gray-800 rounded-xl p-3 sm:p-4 text-center shadow-md">
-      <div class="text-2xl sm:text-3xl font-bold text-blue-600 dark:text-blue-400" id="total-items">0</div>
-      <div class="text-xs sm:text-sm text-gray-600 dark:text-gray-400 mt-1">総アイテム</div>
+<!-- カレンダータブ -->
+<div id="calendar" class="tab-content hidden">
+    <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 mb-4 shadow-md">
+        <!-- Calendar Header -->
+        <div class="flex justify-between items-center mb-4">
+            <button id="prev-month-btn" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 rounded-lg hover:bg-gray-300 dark:hover:bg-gray-600">‹</button>
+            <h3 id="calendar-month-year" class="text-lg font-semibold"></h3>
+            <button id="next-month-btn" class="px-3 py-1 bg-gray-200 dark:bg-gray-700 rounded-lg hover:bg-gray-300 dark:hover:bg-gray-600">›</button>
+        </div>
+        <!-- Calendar Grid -->
+        <div id="calendar-grid" class="grid grid-cols-7 gap-1 text-center">
+            <!-- Day headers will be injected here -->
+        </div>
     </div>
-    <div class="bg-white dark:bg-gray-800 rounded-xl p-3 sm:p-4 text-center shadow-md">
-      <div class="text-2xl sm:text-3xl font-bold text-green-600 dark:text-green-400" id="checked-items">0</div>
-      <div class="text-xs sm:text-sm text-gray-600 dark:text-gray-400 mt-1">チェック済</div>
+    <div id="date-specific-checklist-container" class="hidden bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 shadow-md">
+        <h3 class="text-lg font-semibold mb-4">
+            <span class="mr-2">🗓️</span>
+            <span id="selected-date-display"></span> の持ち物
+        </h3>
+        <ul id="date-specific-checklist" class="space-y-2 mb-4">
+            <!-- Checklist for the selected date will be rendered here -->
+        </ul>
+        <div class="flex gap-2">
+            <input type="text" id="special-item-name" placeholder="この日だけの持ち物を追加" class="flex-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-gray-700 dark:text-white">
+            <button id="add-special-item-btn" class="px-4 py-2 bg-green-600 hover:bg-green-700 text-white rounded-lg font-medium transition-colors">➕ 追加</button>
+        </div>
     </div>
-    <div class="bg-white dark:bg-gray-800 rounded-xl p-3 sm:p-4 text-center shadow-md">
-      <div class="text-2xl sm:text-3xl font-bold text-purple-600 dark:text-purple-400" id="today-items">0</div>
-      <div class="text-xs sm:text-sm text-gray-600 dark:text-gray-400 mt-1">今日の予定</div>
-    </div>
-  </div>
-
-  <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 mb-4 shadow-md">
-    <h3 class="text-lg font-semibold mb-4 flex items-center"><span class="mr-2">🚀</span>クイック追加</h3>
-    <div class="flex gap-2 mb-3">
-      <input type="text" id="quick-name" placeholder="アイテム名を入力" class="flex-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-gray-700 dark:text-white text-base">
-      <button id="quick-add" class="px-4 py-2 bg-green-600 hover:bg-green-700 text-white rounded-lg font-medium transition-colors duration-200 whitespace-nowrap">➕ 追加</button>
-    </div>
-    <div class="flex gap-2 items-center">
-      <select id="quick-category" class="px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-gray-700 dark:text-white">
-        <option value="教材">📚 教材</option>
-        <option value="文房具">✏️ 文房具</option>
-        <option value="体育用品">⚽ 体育用品</option>
-        <option value="その他">📦 その他</option>
-      </select>
-      <button id="quick-scan" class="px-3 py-2 bg-cyan-600 hover:bg-cyan-700 text-white rounded-lg font-medium transition-colors duration-200 text-sm">📷 スキャン追加</button>
-    </div>
-  </div>
-
-    <div class="space-y-4 sm:space-y-6">
-      <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 shadow-md">
-        <h3 class="text-lg font-semibold mb-4 flex items-center"><span class="mr-2">📅</span>今日のチェックリスト</h3>
-        <ul id="today-checklist" class="space-y-2"></ul>
-      </div>
-      <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 shadow-md">
-        <h3 class="text-lg font-semibold mb-4 flex items-center"><span class="mr-2">📅</span>明日のチェックリスト</h3>
-        <ul id="tomorrow-checklist" class="space-y-2"></ul>
-      </div>
-    </div>
-
 </div>
 
 <!-- スキャンタブ（登録用） -->
@@ -228,7 +210,7 @@
 </div>
 
 <!-- チェックタブ -->
-<div id="check" class="tab-content hidden">
+<div id="check" class="tab-content">
   <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 mb-4 shadow-md">
     <h3 class="text-lg font-semibold mb-4 flex items-center"><span class="mr-2">✅</span>曜日別チェックリスト</h3>
     <div class="grid grid-cols-4 sm:grid-cols-7 gap-2 mb-4" id="preset-days">
@@ -471,7 +453,7 @@
 <script src="js/items.js"></script>
 <script src="js/checklist.js"></script>
 <script src="js/category.js"></script>
-<script src="js/quick.js"></script>
+<script src="js/calendar.js"></script>
 <script src="js/backup.js"></script>
 <script src="js/pwa.js"></script>
 <script src="js/sort.js"></script>
