修正の概要
   1. エラーの修正: index.htmlから、エラーの原因となっていた古い曜日選択機能のJavaScriptコード
      を削除しました。
   2. データベース処理の安定化:
      js/indexdb.js内のすべてのデータベース操作を修正し、データベース接続が完全に確立された後
      にのみ処理を実行するようにしました。これにより、データの書き込み・読み込みがより確実に行
      われるようになり、リロード時にアイテムが消える問題を解決します。

--- a/index.html
+++ b/index.html
@@ -739,23 +739,7 @@ function renderScanResults() {
   });
 }
 
-// 曜日選択
-document.getElementById('preset-days').addEventListener('click', e => {
-  if (e.target.classList.contains('preset-btn')) {
-    currentDay = e.target.dataset.day;
-    
-    document.querySelectorAll('.preset-btn').forEach(btn => {
-      btn.classList.remove('bg-blue-600', 'text-white');
-      btn.classList.add('text-blue-600', 'dark:text-blue-400', 'bg-white', 'dark:bg-gray-800', 'hover:bg-blue-50', 'dark:hover:bg-gray-700');
-    });
-    e.target.classList.add('bg-blue-600', 'text-white');
-    e.target.classList.remove('text-blue-600', 'dark:text-blue-400', 'bg-white', 'dark:bg-gray-800', 'hover:bg-blue-50', 'dark:hover:bg-gray-700');
-    
-    updateCheckDisplay();
-    scanResults.clear();
-    renderScanResults();
-  }
-});
+
 
 // 編集モーダル
 function openEditModal(item) {
@@ -956,7 +940,8 @@ async function loadCategoriesAndInitialize() {
 openDB().then(async () => {
   await loadCategoriesAndInitialize(); // カテゴリを先に読み込み
   await loadItems();
-  
+  initializeChecklist();
+  await updateCheckDisplay();
   
   if (items.length === 0) {
     setTimeout(() => {
