metaデータのurlを仮データから変更

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- TODO: Replace with the final, absolute URL to your icon image -->
 <meta property="og:image" content="https://vol-11.github.io/CheckMate-V2/icons/icon-48.png">
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:card" content="https://vol-11.github.io/CheckMate-V2/icons/icon-512.png">
 <!-- TODO: Replace with the final, absolute URL of your deployed app -->
 <meta property="twitter:url" content="https://vol-11.github.io/CheckMate-V2/">
 <meta property="twitter:title" content="📚 CheckMate V2">
