今日の日程から明日の分という表記に変更しました。またロジックのほうも様々な変更を加えています

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
   <div class="bg-white dark:bg-gray-800 rounded-lg p-3 shadow">
     <div id="today-items" class="text-xl font-bold text-orange-600 dark:text-orange-400">0</div>
-    <div class="text-xs text-gray-500 dark:text-gray-400">今日の分</div>
+    <div class="text-xs text-gray-500 dark:text-gray-400">明日の分</div>
   </div>
 </div>
 
