index.htmlに新しいjsを追加

--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
 <script src="js/search.js"></script>
 <script src="js/stats_util.js"></script>
 <script src="js/forgotten.js"></script>
+<script src="js/notifications.js"></script>
 <script>
 // 詳細登録
 document.getElementById('add-detail').addEventListener('click', async () => {
