--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 <div id="scanner" class="tab-content hidden">
   <div class="bg-white dark:bg-gray-800 rounded-xl p-4 sm:p-6 mb-4 shadow-md">
     <div id="viewport" class="relative w-full h-64 border-2 border-blue-600 dark:border-blue-400 rounded-xl overflow-hidden bg-black mb-4">
+      <video id="video" class="w-full h-full object-cover"></video>
+      <canvas id="canvas" class="absolute top-0 left-0 w-full h-full"></canvas>
       <div class="guide absolute top-[20%] left-[15%] right-[15%] bottom-[20%] border-4 border-dashed border-green-400 bg-green-400/10 pointer-events-none rounded-lg"></div>
     </div>
     <div id="status" class="p-3 rounded-lg mb-4 text-center font-medium bg-blue-50 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 border border-blue-200 dark:border-blue-700">📷 準備完了 - スキャン開始ボタンを押してください</div>
@@ -257,6 +259,8 @@
     <!-- スキャンチェックモード -->
     <div id="scan-check-mode" class="hidden">
       <div id="check-viewport" class="relative w-full h-64 border-2 border-blue-600 dark:border-blue-400 rounded-xl overflow-hidden bg-black mb-4">
+        <video id="check-video" class="w-full h-full object-cover"></video>
+        <canvas id="check-canvas" class="absolute top-0 left-0 w-full h-full"></canvas>
         <div class="guide absolute top-[20%] left-[15%] right-[15%] bottom-[20%] border-4 border-dashed border-green-400 bg-green-400/10 pointer-events-none rounded-lg"></div>
       </div>
       <div id="check-status" class="p-3 rounded-lg mb-4 text-center font-medium bg-blue-50 dark:bg-blue-900/30 text-blue-700 dark:text-blue-300 border border-blue-200 dark:border-blue-700">📷 バーコードを読み取って自動チェック</div>
